--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -33,7 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/splashSlogan"
-        android:text="Automate your Property Assets"
+        android:text="@string/app_slogan"
         android:textColor="@color/white"
         android:textSize="25sp"
         android:textStyle="italic"
