--- a/app/src/main/res/menu/menu_secondary_toolbar.xml
+++ b/app/src/main/res/menu/menu_secondary_toolbar.xml
@@ -4,18 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <item
-        android:id="@+id/mainMenuNotification"
+        android:id="@+id/secondaryMenuLogout"
         android:orderInCategory="100"
-        android:title="@string/notification"
-        android:icon="@drawable/notification_bell_ic"
-        app:showAsAction="ifRoom"
-        />
-
-    <item
-        android:id="@+id/mainMenuUser"
-        android:orderInCategory="200"
-        android:title="@string/user"
-        android:icon="@drawable/user_ic"
+        android:title="@string/logout"
+        android:icon="@drawable/logout_ic"
         app:showAsAction="ifRoom"
         />
 
