--- a/app/src/main/res/drawable/edittext_background_state.xml
+++ b/app/src/main/res/drawable/edittext_background_state.xml
@@ -11,6 +11,10 @@
 <!--        android:drawable="@drawable/edittext_background_disabled"/>-->
 
     <item
+        android:state_enabled="false"
+        android:drawable="@drawable/edittext_background_unfocused"/>
+
+    <item
         android:state_enabled="true"
         android:state_focused="false"
         android:drawable="@drawable/edittext_background_unfocused"/>
