--- a/app/src/main/res/layout/activity_landlord_property_tenant_list.xml
+++ b/app/src/main/res/layout/activity_landlord_property_tenant_list.xml
@@ -33,6 +33,76 @@
 
     </RelativeLayout>
 
+    <com.nambimobile.widgets.efab.ExpandableFabLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <com.nambimobile.widgets.efab.ExpandableFab
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            app:efab_orientation="portrait"
+            android:layout_marginBottom="@dimen/min_group_margin"
+            android:layout_marginEnd="@dimen/min_group_margin"
+            app:efab_color="@color/primary_blue"
+            app:efab_icon="@drawable/more_ic_white"
+            app:efab_iconAnimationRotationDeg="-180"
+            app:efab_closingAnticipateTension="0"
+            app:efab_size="normal"
+            />
+
+        <com.nambimobile.widgets.efab.FabOption
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/landlordManagePropertyAddTenantRemovePropertyButton"
+            app:fab_color="@color/alert_red"
+            app:fab_icon="@drawable/detail_ic_white"
+            app:label_text="Remove Property"
+            app:label_backgroundColor="@color/alert_red"
+            />
+
+        <com.nambimobile.widgets.efab.FabOption
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/landlordManagePropertyAddTenantTenureContractButton"
+            app:fab_color="@color/primary_blue"
+            app:fab_icon="@drawable/ic_report_white"
+            app:label_text="Tenure Contract"
+            app:label_backgroundColor="@color/primary_blue"
+            />
+
+        <com.nambimobile.widgets.efab.FabOption
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/landlordManagePropertyAddTenantPaymentRecordsButton"
+            app:fab_color="@color/primary_blue"
+            app:fab_icon="@drawable/ic_payment_white"
+            app:label_text="Payment Records"
+            app:label_backgroundColor="@color/primary_blue"
+            />
+
+        <com.nambimobile.widgets.efab.FabOption
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/landlordManagePropertyAddTenantExpensesButton"
+            app:fab_color="@color/primary_blue"
+            app:fab_icon="@drawable/ic_money_white"
+            app:label_text="Expenses"
+            app:label_backgroundColor="@color/primary_blue"
+            />
+
+        <com.nambimobile.widgets.efab.FabOption
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/landlordManagePropertyAddTenantDetailButton"
+            app:fab_color="@color/primary_blue"
+            app:fab_icon="@drawable/detail_ic_white"
+            app:label_text="Details"
+            app:label_backgroundColor="@color/primary_blue"
+            />
+
+    </com.nambimobile.widgets.efab.ExpandableFabLayout>
+
     <android.widget.Button
         android:layout_width="@dimen/primary_button_width"
         android:layout_height="wrap_content"
@@ -42,80 +112,79 @@
         android:textSize="@dimen/primary_button_font_size"
         android:background="@drawable/primary_button_background_state"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/group_gap_height"
-        android:layout_above="@id/landlordManagePropertyAddTenantDetailButton"
+        android:layout_marginTop="@dimen/primary_button_gap_height"
+        android:layout_marginBottom="@dimen/primary_button_gap_height"
+        android:layout_alignParentBottom="true"
         />
     <!--    android:paddingTop="@dimen/large_button_padding"-->
     <!--    android:paddingBottom="@dimen/large_button_padding"-->
 <!--    android:layout_marginBottom="@dimen/secondary_button_gap_height"-->
 
-    <android.widget.Button
-        android:layout_width="@dimen/primary_button_width"
-        android:layout_height="wrap_content"
-        android:id="@+id/landlordManagePropertyAddTenantDetailButton"
-        android:text="@string/property_detail"
-        android:textColor="@color/white"
-        android:textSize="@dimen/primary_button_font_size"
-        android:background="@drawable/primary_button_background_state"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/primary_button_gap_height"
-        android:layout_above="@id/landlordManagePropertyAddTenantExpensesButton"
-        />
-<!--    android:paddingTop="@dimen/large_button_padding"-->
-<!--    android:paddingBottom="@dimen/large_button_padding"-->
+<!--    <android.widget.Button-->
+<!--        android:layout_width="@dimen/primary_button_width"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:id="@+id/landlordManagePropertyAddTenantDetailButton"-->
+<!--        android:text="@string/property_detail"-->
+<!--        android:textColor="@color/white"-->
+<!--        android:textSize="@dimen/primary_button_font_size"-->
+<!--        android:background="@drawable/primary_button_background_state"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:layout_marginTop="@dimen/primary_button_gap_height"-->
+<!--        android:layout_above="@id/landlordManagePropertyAddTenantExpensesButton"-->
+<!--        />-->
 
-    <android.widget.Button
-        android:layout_width="@dimen/primary_button_width"
-        android:layout_height="wrap_content"
-        android:id="@+id/landlordManagePropertyAddTenantExpensesButton"
-        android:text="@string/property_expenses"
-        android:textColor="@color/white"
-        android:textSize="@dimen/primary_button_font_size"
-        android:background="@drawable/primary_button_background_state"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/primary_button_gap_height"
-        android:layout_above="@id/landlordManagePropertyAddTenantPaymentRecordsButton"
-        />
+<!--    <android.widget.Button-->
+<!--        android:layout_width="@dimen/primary_button_width"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:id="@+id/landlordManagePropertyAddTenantExpensesButton"-->
+<!--        android:text="@string/property_expenses"-->
+<!--        android:textColor="@color/white"-->
+<!--        android:textSize="@dimen/primary_button_font_size"-->
+<!--        android:background="@drawable/primary_button_background_state"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:layout_marginTop="@dimen/primary_button_gap_height"-->
+<!--        android:layout_above="@id/landlordManagePropertyAddTenantPaymentRecordsButton"-->
+<!--        />-->
 
-    <android.widget.Button
-        android:layout_width="@dimen/primary_button_width"
-        android:layout_height="wrap_content"
-        android:id="@+id/landlordManagePropertyAddTenantPaymentRecordsButton"
-        android:text="@string/payment_records"
-        android:textColor="@color/white"
-        android:textSize="@dimen/primary_button_font_size"
-        android:background="@drawable/primary_button_background_state"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/primary_button_gap_height"
-        android:layout_above="@id/landlordManagePropertyAddTenantTenureContractButton"
-        />
+<!--    <android.widget.Button-->
+<!--        android:layout_width="@dimen/primary_button_width"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:id="@+id/landlordManagePropertyAddTenantPaymentRecordsButton"-->
+<!--        android:text="@string/payment_records"-->
+<!--        android:textColor="@color/white"-->
+<!--        android:textSize="@dimen/primary_button_font_size"-->
+<!--        android:background="@drawable/primary_button_background_state"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:layout_marginTop="@dimen/primary_button_gap_height"-->
+<!--        android:layout_above="@id/landlordManagePropertyAddTenantTenureContractButton"-->
+<!--        />-->
 
-    <android.widget.Button
-        android:layout_width="@dimen/primary_button_width"
-        android:layout_height="wrap_content"
-        android:id="@+id/landlordManagePropertyAddTenantTenureContractButton"
-        android:text="@string/tenure_contracts"
-        android:textColor="@color/white"
-        android:textSize="@dimen/primary_button_font_size"
-        android:background="@drawable/primary_button_background_state"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/primary_button_gap_height"
-        android:layout_above="@id/landlordManagePropertyAddTenanRemovePropertyButton"
-        />
+<!--    <android.widget.Button-->
+<!--        android:layout_width="@dimen/primary_button_width"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:id="@+id/landlordManagePropertyAddTenantTenureContractButton"-->
+<!--        android:text="@string/tenure_contracts"-->
+<!--        android:textColor="@color/white"-->
+<!--        android:textSize="@dimen/primary_button_font_size"-->
+<!--        android:background="@drawable/primary_button_background_state"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:layout_marginTop="@dimen/primary_button_gap_height"-->
+<!--        android:layout_above="@id/landlordManagePropertyAddTenanRemovePropertyButton"-->
+<!--        />-->
 
-    <android.widget.Button
-        android:layout_width="@dimen/primary_button_width"
-        android:layout_height="wrap_content"
-        android:id="@+id/landlordManagePropertyAddTenanRemovePropertyButton"
-        android:text="@string/remove_property"
-        android:textColor="@color/white"
-        android:textSize="@dimen/primary_button_font_size"
-        android:background="@drawable/alert_button_background_state"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/primary_button_gap_height"
-        android:layout_marginBottom="@dimen/primary_button_gap_height"
-        android:layout_alignParentBottom="true"
-        />
+<!--    <android.widget.Button-->
+<!--        android:layout_width="@dimen/primary_button_width"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:id="@+id/landlordManagePropertyAddTenantRemovePropertyButton"-->
+<!--        android:text="@string/remove_property"-->
+<!--        android:textColor="@color/white"-->
+<!--        android:textSize="@dimen/primary_button_font_size"-->
+<!--        android:background="@drawable/alert_button_background_state"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:layout_marginTop="@dimen/primary_button_gap_height"-->
+<!--        android:layout_marginBottom="@dimen/primary_button_gap_height"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        />-->
 
 
     <View
