--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,14 +13,14 @@
         android:src="@drawable/main_propster_white_icon"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
-        />
+        android:contentDescription="@string/app_name" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/splashTitle"
         android:text="@string/app_name"
-        android:textColor="@color/alert_red"
+        android:textColor="@color/white"
         android:textSize="50sp"
         android:textStyle="bold"
         android:layout_centerHorizontal="true"
