--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,4 +13,10 @@
         <item name="cornerSize">50%</item>
     </style>
 
+    <style name="property_expenses_uploaded_file_image">
+        <item name="backgroundColor">@color/white</item>
+        <item name="strokeColor">@color/disabled_grey</item>
+        <item name="strokeWidth">1dp</item>
+    </style>
+
 </resources>
