--- a/app/src/main/res/layout/listview_landlord_property_item.xml
+++ b/app/src/main/res/layout/listview_landlord_property_item.xml
@@ -49,7 +49,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/landlordManagePropertyListItemTenantCount"
-                        style="?android:attr/ratingBarStyleSmall"
+                        style="@style/property_tenant_user_icon"
                         android:numStars="10"
                         android:layout_alignParentEnd="true"
                         />
