--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,4 +19,10 @@
         <item name="strokeWidth">1dp</item>
     </style>
 
+    <style name="property_tenant_user_icon" parent="@android:style/Widget.RatingBar">
+        <item name="android:progressDrawable">@drawable/property_tenant_user_icon</item>
+        <item name="android:minHeight">23dip</item>
+        <item name="android:maxHeight">25dip</item>
+    </style>
+
 </resources>
