--- a/app/src/main/res/layout/activity_landlord_property_add_tenant.xml
+++ b/app/src/main/res/layout/activity_landlord_property_add_tenant.xml
@@ -289,20 +289,16 @@
                 android:layout_marginTop="@dimen/input_field_gap_height"
                 />
 
-            <EditText
+            <Spinner
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/input_field_height"
                 android:id="@+id/landlordPropertyAddTenantSalaryRange"
-                android:autofillHints=""
-                android:hint="@string/salary_range"
-                android:inputType="number"
                 android:textAlignment="textStart"
                 android:textSize="@dimen/input_field_font_size"
                 android:textColor="@color/black"
                 android:textColorHint="@color/disabled_grey"
                 android:background="@drawable/edittext_background_state"
                 android:layout_below="@id/landlordPropertyAddTenantSalaryRangeLabel"
-                android:paddingStart="@dimen/input_field_gap_height"
                 tools:ignore="RtlSymmetry"
                 />
 
