--- a/app/src/main/res/layout/activity_landlord_property_tenant_list.xml
+++ b/app/src/main/res/layout/activity_landlord_property_tenant_list.xml
@@ -62,25 +62,25 @@
             app:label_backgroundColor="@color/alert_red"
             />
 
-        <com.nambimobile.widgets.efab.FabOption
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/landlordManagePropertyTenureContractButton"
-            app:fab_color="@color/primary_blue"
-            app:fab_icon="@drawable/ic_report_white"
-            app:label_text="Tenure Contracts"
-            app:label_backgroundColor="@color/primary_blue"
-            />
+<!--        <com.nambimobile.widgets.efab.FabOption-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:id="@+id/landlordManagePropertyTenureContractButton"-->
+<!--            app:fab_color="@color/primary_blue"-->
+<!--            app:fab_icon="@drawable/ic_report_white"-->
+<!--            app:label_text="Tenure Contracts"-->
+<!--            app:label_backgroundColor="@color/primary_blue"-->
+<!--            />-->
 
-        <com.nambimobile.widgets.efab.FabOption
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/landlordManagePropertyPaymentRecordsButton"
-            app:fab_color="@color/primary_blue"
-            app:fab_icon="@drawable/ic_payment_white"
-            app:label_text="Payment Records"
-            app:label_backgroundColor="@color/primary_blue"
-            />
+<!--        <com.nambimobile.widgets.efab.FabOption-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:id="@+id/landlordManagePropertyPaymentRecordsButton"-->
+<!--            app:fab_color="@color/primary_blue"-->
+<!--            app:fab_icon="@drawable/ic_payment_white"-->
+<!--            app:label_text="Payment Records"-->
+<!--            app:label_backgroundColor="@color/primary_blue"-->
+<!--            />-->
 
         <com.nambimobile.widgets.efab.FabOption
             android:layout_width="wrap_content"
